--- a/automation/automation.csproj
+++ b/automation/automation.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Pulumi" Version="3.48.0" />
     <PackageReference Include="Pulumi.Automation" Version="3.48.0" />
+    <PackageReference Include="Pulumi.Azure" Version="5.25.0" />
   </ItemGroup>
 
 </Project>
